Alteração de interação com banco

--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -45,11 +45,11 @@
                 <ul class="nav">
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle user-name" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="http://duolingo-images.s3.amazonaws.com/avatars/281464630/NJsH7DN1Yd/medium" class="img-circle" /> Francisco
+                        <img id="imgUser" src="" class="img-circle img-user-profile" /> <span id="userName"></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                         <a class="dropdown-item" href="#">Configurações</a>
-                        <a class="dropdown-item" href="#">Sair</a>
+                        <a class="dropdown-item" href="login.html">Sair</a>
                     </div>
                 </li>
                 </ul>
@@ -62,7 +62,7 @@
             <div id="divUserChatList" class="col-12 col-md-8 div-style">
                 <div>
                     <h2>Comunidade</h2>
-                    <p>Que tal começar um papo com outros Lenguees sobre os assuntos abaixo:</p>
+                    <p>Que tal começar um papo com outros Lenguees sobre os assuntos abaixo?</p>
                 </div>
                 <div class="col-md-12 text-center">
                     <ul id="tagCloud" class="fa-ul tag-highlight">
