--- a/public/login.html
+++ b/public/login.html
@@ -23,10 +23,10 @@
 
     <form class="form-signin">
       <h2 class="form-signin-heading"><img src="img/logo.png"></h2>
-      <label for="inputEmail" class="sr-only">Email</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="E-mail" required="" autofocus="">
+      <label for="inputEmail" class="sr-only">Login</label>
+      <input type="email" id="txtUsuario" class="form-control" placeholder="E-mail" required autofocus="">
       <label for="inputPassword" class="sr-only">Senha</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required="">
+      <input type="password" id="txtSenha" class="form-control" placeholder="Senha" required>
       <div class="checkbox">
         <label>
             <input type="checkbox" value="remember-me"> Lembrar
