--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Off Canvas Template for Bootstrap</title>
+    <title>Lingue - Aprendizado de Línguas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="style/bootstrap.min.css" rel="stylesheet">
@@ -135,7 +135,7 @@
         <hr>
 
         <footer>
-            <p>© Company 2017</p>
+            <p>© Lengua 2017</p>
         </footer>
 
     </div>
