Ajuste de layout de chat

--- a/public/comunidade.html
+++ b/public/comunidade.html
@@ -104,7 +104,7 @@
                                 <i class="fa fa-facebook fa-3x"></i> 
                             </div>
                             <div class="col-md-9">
-                                <div>Spotify</div>
+                                <div>Facebook</div>
                                 <div class="small">Conecte suas curtidas, paginas e interesses</div>
                             </div></a>
                         <a href="#" class="list-group-item inactive">
@@ -116,6 +116,7 @@
                                 <div class="small">Vídeos interessantes em comum? Conecte seu youtube!</div>
                             </div></a>
                         </a>
+                        
                         <a href="#" class="list-group-item inactive">
                             <div class="col-md-3">
                                 <i class="fa fa-sun-o fa-3x"></i> 
@@ -131,9 +132,7 @@
             <!--/span-->
         </div>
         <!--/row-->
-
         <hr>
-
         <footer>
             <p>© Lengua 2017</p>
         </footer>
