Ajuste de layout de chat

--- a/public/chat.html
+++ b/public/chat.html
@@ -329,6 +329,10 @@
             color: #fff;
             padding: 4px 0px 4px 20px;
         }
+
+        .chat-tags b {
+            color: #46be8a
+        }
     </style>
 
     <link href="https://use.fontawesome.com/0cf9ca1c8f.css" media="all" rel="stylesheet">
