--- a/public/app/comunidade.html
+++ b/public/app/comunidade.html
@@ -148,7 +148,7 @@
             </div>
             <div class="col-10 col-md-10">
                 <div class="col-12 col-md-12 list-discussion-title">
-                    <a href="#">
+                    <a href="https://node-red-bluehack-app.mybluemix.net/message/{{mainUser}}{{user}}/{{mainUser}}">
                         <div class="name">{{name}}</div>
                         <div>"{{resume}}""</div>
                     </a>
